--- a/MyCoding/3. K번째 큰 수.ipynb
+++ b/MyCoding/3. K번째 큰 수.ipynb
@@ -2,54 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "source": [
     "import sys\r\n",
     "\r\n",
     "a = open(\"input.txt\", \"rt\")\r\n",
     "\r\n",
-    "# N은 개수, K는 n번째 개수\r\n",
-    "N, K = map(int, a.readline().split())\r\n",
+    "n, k = map(int, a.readline().split())\r\n",
     "arr = list(map(int, a.readline().split()))\r\n",
-    "max = [0]\r\n",
+    "res = set()\r\n",
     "\r\n",
-    "# 모든 경우의 수를 기록\r\n",
-    "for i in arr :\r\n",
-    "    for j in arr :\r\n",
-    "        # 같은 카드를 뽑으면 안됨\r\n",
-    "        if i == j :\r\n",
-    "            continue\r\n",
-    "        for k in arr :\r\n",
-    "            # 같은 카드를 뽑으면 안됨\r\n",
-    "            if k == j or k == i :\r\n",
-    "                continue\r\n",
-    "            result = i + j + k\r\n",
-    "    \r\n",
-    "    max.append(result)\r\n",
+    "for i in range(n):\r\n",
+    "    for j in range(i+1, n):\r\n",
+    "        for m in range(j+1, n):\r\n",
+    "            res.add(arr[i] + arr[j] + arr[m])\r\n",
     "\r\n",
-    "max.sort(reverse = True)\r\n",
-    "print(max)\r\n",
-    "max[0]"
+    "res = list(res)\r\n",
+    "res.sort(reverse = True)\r\n",
+    "print(res[k-1])\r\n"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[133, 113, 102, 101, 91, 83, 81, 79, 79, 79, 0]\n"
-     ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "133"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 5
-    }
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "1"
    ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "print(2)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
    "metadata": {}
   }
  ],
