--- a/MyCoding/Section3/11. 격자판 회문수.ipynb
+++ b/MyCoding/Section3/11. 격자판 회문수.ipynb
@@ -2,25 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "source": [
-    "import sys\r\n",
+    "file = open(\"./input/input11.txt\", \"rt\")\r\n",
+    "board = [list(map(int, file.readline().split())) for _ in range(7)]\r\n",
+    "cnt = 0\r\n",
     "\r\n",
-    "a = open(\"input.txt\", \"rt\")\r\n",
+    "for i in range(3):\r\n",
+    "    for j in range(7):\r\n",
+    "        tmp = board[j][i:i+5]\r\n",
+    "        if tmp == tmp[::-1]:\r\n",
+    "            cnt +=1\r\n",
+    "        for k in range(2):\r\n",
+    "            if board[i+k][j] != board[i+5-k-1][j]:\r\n",
+    "                break\r\n",
     "\r\n",
-    "b = int(a.readline())\r\n",
-    "b"
+    "        else:\r\n",
+    "            cnt += 1\r\n",
+    "\r\n",
+    "print(cnt)"
    ],
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 34
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "3\n"
+     ]
     }
    ],
    "metadata": {}
