--- a/MyCoding/Section3/3. 카드 역배치.ipynb
+++ b/MyCoding/Section3/3. 카드 역배치.ipynb
@@ -1,17 +1,36 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "source": [
-    "file = open(\"input\")"
+    "<h2><br>swap하는 방법\r\n",
+    "a, b=b, a\r\n",
+    "</h2>"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "source": [
+    "file = open(\"./input/input3.txt\", \"rt\")\r\n",
+    "num = list(range(21))\r\n",
+    "\r\n",
+    "for _ in range(10):\r\n",
+    "    s, e = map(int, file.readline().split())\r\n",
+    "    for i in range((e-s+1) // 2):\r\n",
+    "        num[s+i], num[e-i] = num[e-i], num[s+i]\r\n",
+    "        \r\n",
+    "num.pop(0)\r\n",
+    "for x in num:\r\n",
+    "    print(x, end = ' ')\r\n"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Z\n"
+      "1 2 3 4 10 9 8 7 13 12 11 5 6 14 15 16 17 18 19 20 "
      ]
     }
    ],
