--- a/MyCoding/Section3/7. 사과나무.ipynb
+++ b/MyCoding/Section3/7. 사과나무.ipynb
@@ -2,16 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "source": [
-    "file = open(\"input\")"
+    "file = open(\"./input/input8.txt\", \"rt\")\r\n",
+    "n = int(file.readline())\r\n",
+    "arr = [list(map(int, file.readline().split())) for _ in range(n)]\r\n",
+    "\r\n",
+    "# 1. s = e = n//2\r\n",
+    "# 2. s -= 1, e+= 1 (s,e+1)\r\n",
+    "# 3. if s == 0:\r\n",
+    "\r\n",
+    "s = e = n//2\r\n",
+    "sum = 0\r\n",
+    "for i in range(n):\r\n",
+    "    for j in range(s, e+1):\r\n",
+    "        sum += arr[i][j]\r\n",
+    "    if i < n//2:\r\n",
+    "        s -= 1\r\n",
+    "        e += 1\r\n",
+    "    else:\r\n",
+    "        s += 1\r\n",
+    "        e -= 1\r\n",
+    "\r\n",
+    "print(sum)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Z\n"
+      "379\n"
      ]
     }
    ],
