--- a/MyCoding/Section3/9. 봉우리.ipynb
+++ b/MyCoding/Section3/9. 봉우리.ipynb
@@ -2,16 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "source": [
-    "file = open(\"input\")"
+    "file = open(\"./input/input9.txt\", \"rt\")\r\n",
+    "dx = [-1, 0, 1, 0]\r\n",
+    "dy = [0, 1, 0, -1]\r\n",
+    "\r\n",
+    "n = int(file.readline())\r\n",
+    "a = [list(map(int, file.readline().split())) for _ in range(n)]\r\n",
+    "\r\n",
+    "a.insert(0, [0] * n)\r\n",
+    "a.append([0] * n)\r\n",
+    "\r\n",
+    "for x in a:\r\n",
+    "    x.insert(0, 0)\r\n",
+    "    x.append(0)\r\n",
+    "\r\n",
+    "cnt = 0\r\n",
+    "for i in range(1, n+1):\r\n",
+    "    for j in range(1, n+1):\r\n",
+    "        if all(a[i][j] > a[i+dx[k]][j+dy[k]] for k in range(4)):\r\n",
+    "            cnt+=1\r\n",
+    "\r\n",
+    "print(cnt)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Z\n"
+      "10\n"
      ]
     }
    ],
