--- a/MyCoding/Section4/1. 이분검색.ipynb
+++ b/MyCoding/Section4/1. 이분검색.ipynb
@@ -2,16 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "source": [
-    "file = open(\"input\")"
+    "file = open(\"./input/input1.txt\", \"rt\")\r\n",
+    "n,m = map(int, file.readline().split())\r\n",
+    "arr = list(map(int, file.readline().split()))\r\n",
+    "\r\n",
+    "# 이분탐색\r\n",
+    "# N = 수의 개수, M = 찾는 값\r\n",
+    "arr.sort()\r\n",
+    "lt = 0; rt = n-1\r\n",
+    "while lt <= rt:\r\n",
+    "    mid = (lt + rt) // 2\r\n",
+    "    if m == arr[mid]:\r\n",
+    "        print(mid+1)\r\n",
+    "        break\r\n",
+    "    # m이 더 작다면, rt = mid-1\r\n",
+    "    elif m < arr[mid]:\r\n",
+    "        rt = mid-1\r\n",
+    "    # 만약에, m이 더 크다면, lt = mid+1\r\n",
+    "    elif m > arr[mid]:\r\n",
+    "        lt = mid+1\r\n",
+    "\r\n"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Z\n"
+      "3\n"
      ]
     }
    ],
