BFS, DFS, 그리디, 정렬

--- a/MyCoding/Section6/1. 재귀함수와 스택.ipynb
+++ b/MyCoding/Section6/1. 재귀함수와 스택.ipynb
@@ -2,34 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "1011"
      ]
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.stdin = open(\"./input/input6.txt\", \"rt\")\n",
+    "from sys import stdin\n",
+    "stdin = open(\"./input/input1.txt\", \"rt\")\n",
     "\n",
-    "sugar = int(sys.stdin.readline())\n",
-    "bag = 0\n",
+    "def binary(n):\n",
+    "    # 끝에서부터 출력되는 구조 => \n",
+    "    # 1. n % 2를 출력하고, binary(n // 2)\n",
     "\n",
-    "while sugar >= 0:\n",
-    "    if sugar % 5 == 0:\n",
-    "        bag += sugar // 5\n",
-    "        print(bag)\n",
-    "        break\n",
-    "    sugar -= 3\n",
-    "    bag += 1\n",
-    "else:\n",
-    "    print(-1)\n"
+    "    if n == 0:\n",
+    "        return\n",
+    "    \n",
+    "    binary(n // 2)\n",
+    "    print(n % 2, end = '')\n",
+    "\n",
+    "binary(11)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
