--- a/MyCoding/test.ipynb
+++ b/MyCoding/test.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#1 NO\n",
+      "#2 NO\n",
+      "#3 YES\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 회문인지 확인 -> Yes or No (대소문자 구분 x)\n",
     "# 2. 숫자 N, N개의 단어가 입력됨\n",
