--- a/이것이 취업을 위한 코딩테스트다/그리디 알고리즘/2. 곱하기 혹은 더하기.ipynb
+++ b/이것이 취업을 위한 코딩테스트다/그리디 알고리즘/2. 곱하기 혹은 더하기.ipynb
@@ -2,33 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "576\n"
      ]
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.stdin = open(\"./input/input6.txt\", \"rt\")\n",
+    "data = input()\n",
     "\n",
-    "sugar = int(sys.stdin.readline())\n",
-    "bag = 0\n",
+    "result = int(data[0])\n",
     "\n",
-    "while sugar >= 0:\n",
-    "    if sugar % 5 == 0:\n",
-    "        bag += sugar // 5\n",
-    "        print(bag)\n",
-    "        break\n",
-    "    sugar -= 3\n",
-    "    bag += 1\n",
-    "else:\n",
-    "    print(-1)\n"
+    "for i in range(1, len(data)):\n",
+    "    num = int(data[i])\n",
+    "    if num <= 1 or result <= 1:\n",
+    "        result += num\n",
+    "    else:\n",
+    "        result *= num\n",
+    "        \n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = []\n",
+    "a.append(1)\n",
+    "a.append(1)\n",
+    "a.append(1)\n",
+    "a.append(1)\n",
+    "\n",
+    "print(a)\n",
+    "\n",
+    "split"
    ]
   }
  ],
