--- a/이것이 취업을 위한 코딩테스트다/그리디 알고리즘/4. 상하좌우.ipynb
+++ b/이것이 취업을 위한 코딩테스트다/그리디 알고리즘/4. 상하좌우.ipynb
@@ -2,33 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "1 2\n",
+      "0 1\n",
+      "1 0\n",
+      "2 1\n"
      ]
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.stdin = open(\"./input/input6.txt\", \"rt\")\n",
+    "from sys import stdin\n",
+    "stdin = open(\"./input/input4.txt\", \"rt\")\n",
     "\n",
-    "sugar = int(sys.stdin.readline())\n",
-    "bag = 0\n",
+    "init = {}\n",
     "\n",
-    "while sugar >= 0:\n",
-    "    if sugar % 5 == 0:\n",
-    "        bag += sugar // 5\n",
-    "        print(bag)\n",
-    "        break\n",
-    "    sugar -= 3\n",
-    "    bag += 1\n",
-    "else:\n",
-    "    print(-1)\n"
+    "dx = [0, -1, 0, 1]\n",
+    "dy = [1, 0, -1, 0]\n",
+    "\n",
+    "x, y = 1, 1\n",
+    "\n",
+    "for i in range(4):\n",
+    "    nx = x + dx[i]\n",
+    "    ny = y + dy[i]\n",
+    "    print(nx, ny)\n"
    ]
   }
  ],
