--- a/이것이 취업을 위한 코딩테스트다/그리디 알고리즘/5. 시각.ipynb
+++ b/이것이 취업을 위한 코딩테스트다/그리디 알고리즘/5. 시각.ipynb
@@ -2,33 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "11475\n"
      ]
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.stdin = open(\"./input/input6.txt\", \"rt\")\n",
+    "from sys import stdin\n",
+    "stdin = open(\"./input/input5.txt\", \"rt\")\n",
     "\n",
-    "sugar = int(sys.stdin.readline())\n",
-    "bag = 0\n",
+    "n = int(stdin.readline())\n",
     "\n",
-    "while sugar >= 0:\n",
-    "    if sugar % 5 == 0:\n",
-    "        bag += sugar // 5\n",
-    "        print(bag)\n",
-    "        break\n",
-    "    sugar -= 3\n",
-    "    bag += 1\n",
-    "else:\n",
-    "    print(-1)\n"
+    "count = 0\n",
+    "for x in range(n+1):\n",
+    "    for y in range(60):\n",
+    "        for z in range(60):\n",
+    "            if '3' in str(x) + str(y) + str(z):\n",
+    "                count += 1\n",
+    "\n",
+    "print(count)"
    ]
   }
  ],
