--- a/이것이 취업을 위한 코딩테스트다/그리디 알고리즘/folder.ipynb
+++ b/이것이 취업을 위한 코딩테스트다/그리디 알고리즘/folder.ipynb
@@ -2,33 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
-    "sys.stdin = open(\"./input/input6.txt\", \"rt\")\n",
-    "\n",
-    "sugar = int(sys.stdin.readline())\n",
-    "bag = 0\n",
-    "\n",
-    "while sugar >= 0:\n",
-    "    if sugar % 5 == 0:\n",
-    "        bag += sugar // 5\n",
-    "        print(bag)\n",
-    "        break\n",
-    "    sugar -= 3\n",
-    "    bag += 1\n",
-    "else:\n",
-    "    print(-1)\n"
+    "for i in range(1, 31):\n",
+    "    sys.stdin = open(\"./input/input\" + str(i) + \".txt\", \"wt\")\n"
    ]
   }
  ],
