--- a/이것이 취업을 위한 코딩테스트다/정렬/1. 선택정렬.ipynb
+++ b/이것이 취업을 위한 코딩테스트다/정렬/1. 선택정렬.ipynb
@@ -2,33 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
      ]
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.stdin = open(\"./input/input6.txt\", \"rt\")\n",
+    "from sys import stdin\n",
+    "stdin = open(\"./input/input1.txt\", \"rt\")\n",
     "\n",
-    "sugar = int(sys.stdin.readline())\n",
-    "bag = 0\n",
+    "num = list(map(int, stdin.readline()))\n",
     "\n",
-    "while sugar >= 0:\n",
-    "    if sugar % 5 == 0:\n",
-    "        bag += sugar // 5\n",
-    "        print(bag)\n",
-    "        break\n",
-    "    sugar -= 3\n",
-    "    bag += 1\n",
-    "else:\n",
-    "    print(-1)\n"
+    "for x in range(len(num)):\n",
+    "    minIdx = x\n",
+    "    for y in range(x+1, len(num)):\n",
+    "        # 1. 가장 작은 3을 선택해 x의 7 바꿈\n",
+    "        if num[minIdx] > num[y]:\n",
+    "            minIdx = y\n",
+    "    num[minIdx], num[x] = num[x], num[minIdx]\n",
+    "\n",
+    "print(num)\n",
+    "\n"
    ]
   }
  ],
