--- a/이것이 취업을 위한 코딩테스트다/정렬/3. 퀵 정렬.ipynb
+++ b/이것이 취업을 위한 코딩테스트다/정렬/3. 퀵 정렬.ipynb
@@ -2,33 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
      ]
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.stdin = open(\"./input/input6.txt\", \"rt\")\n",
+    "from sys import stdin\n",
+    "stdin = open(\"./input/input3.txt\", \"rt\")\n",
     "\n",
-    "sugar = int(sys.stdin.readline())\n",
-    "bag = 0\n",
+    "arr = [5, 7, 9, 0, 3, 1, 6, 2, 4, 8]\n",
     "\n",
-    "while sugar >= 0:\n",
-    "    if sugar % 5 == 0:\n",
-    "        bag += sugar // 5\n",
-    "        print(bag)\n",
-    "        break\n",
-    "    sugar -= 3\n",
-    "    bag += 1\n",
-    "else:\n",
-    "    print(-1)\n"
+    "def quick_sort(arr):\n",
+    "    if len(arr) <= 1:\n",
+    "        return arr\n",
+    "    \n",
+    "    pivot = arr[0]\n",
+    "    tail = arr[1:]\n",
+    "\n",
+    "    left_side = [x for x in tail if x <= pivot]\n",
+    "    right_side = [x for x in tail if x > pivot]\n",
+    "\n",
+    "    return quick_sort(left_side) + [pivot] + quick_sort(right_side)\n",
+    "\n",
+    "print(quick_sort(arr))\n"
    ]
   }
  ],
