--- a/이것이 취업을 위한 코딩테스트다/BFS,DFS/DFS.ipynb
+++ b/이것이 취업을 위한 코딩테스트다/BFS,DFS/DFS.ipynb
@@ -2,33 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "1 2 3 4 5 6 7 8 9 10 11 "
      ]
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.stdin = open(\"./input/input6.txt\", \"rt\")\n",
+    "def dfs(graph, v, visited):\n",
+    "    visited[v] = True\n",
+    "    print(v, end = ' ')\n",
+    "    for i in graph[v]:\n",
+    "        if not visited[i]:\n",
+    "            dfs(graph, i, visited)\n",
     "\n",
-    "sugar = int(sys.stdin.readline())\n",
-    "bag = 0\n",
+    "graph = [\n",
+    "    [],\n",
+    "    [2, 3, 8],\n",
+    "    [1, 7],\n",
+    "    [1, 4, 5],\n",
+    "    [3, 5],\n",
+    "    [3, 4],\n",
+    "    [7],\n",
+    "    [2, 6, 8],\n",
+    "    [1, 7]\n",
+    "]\n",
     "\n",
-    "while sugar >= 0:\n",
-    "    if sugar % 5 == 0:\n",
-    "        bag += sugar // 5\n",
-    "        print(bag)\n",
-    "        break\n",
-    "    sugar -= 3\n",
-    "    bag += 1\n",
-    "else:\n",
-    "    print(-1)\n"
+    "visited = False * 9\n",
+    "\n",
+    "dfs(graph, 1, visited)"
    ]
   }
  ],
