--- a/이것이 취업을 위한 코딩테스트다/그리디 알고리즘/3. 모험가 길드.ipynb
+++ b/이것이 취업을 위한 코딩테스트다/그리디 알고리즘/3. 모험가 길드.ipynb
@@ -2,33 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "2\n"
      ]
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.stdin = open(\"./input/input6.txt\", \"rt\")\n",
+    "from sys import stdin\n",
+    "stdin = open(\"./input/input3.txt\", \"rt\")\n",
     "\n",
-    "sugar = int(sys.stdin.readline())\n",
-    "bag = 0\n",
+    "n = int(stdin.readline())\n",
+    "data = list(map(int, stdin.readline().split()))\n",
     "\n",
-    "while sugar >= 0:\n",
-    "    if sugar % 5 == 0:\n",
-    "        bag += sugar // 5\n",
-    "        print(bag)\n",
-    "        break\n",
-    "    sugar -= 3\n",
-    "    bag += 1\n",
-    "else:\n",
-    "    print(-1)\n"
+    "data.sort()\n",
+    "\n",
+    "result = 0\n",
+    "count = 0\n",
+    "\n",
+    "for i in data:\n",
+    "    count += 1\n",
+    "    if count >= i:\n",
+    "        result += 1\n",
+    "        count = 0\n",
+    "\n",
+    "print(result)"
    ]
   }
  ],
