--- a/이것이 취업을 위한 코딩테스트다/정렬/2. 삽입 정렬.ipynb
+++ b/이것이 취업을 위한 코딩테스트다/정렬/2. 삽입 정렬.ipynb
@@ -2,33 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
      ]
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.stdin = open(\"./input/input6.txt\", \"rt\")\n",
+    "from sys import stdin\n",
+    "stdin = open(\"./input/input2.txt\", \"rt\")\n",
     "\n",
-    "sugar = int(sys.stdin.readline())\n",
-    "bag = 0\n",
+    "# 1. arr[i]와 1 ~ i까지를 비교\n",
+    "# 2. arr[i] > arr[j]이라면, minValue = j\n",
+    "# 3. range(0, n-1)만큼 회전해줄 것\n",
+    "arr = list(map(int,stdin.readline()))\n",
     "\n",
-    "while sugar >= 0:\n",
-    "    if sugar % 5 == 0:\n",
-    "        bag += sugar // 5\n",
-    "        print(bag)\n",
-    "        break\n",
-    "    sugar -= 3\n",
-    "    bag += 1\n",
-    "else:\n",
-    "    print(-1)\n"
+    "for i in range(1, len(arr)):\n",
+    "    for j in range(i, 0, -1):\n",
+    "        if arr[j] < arr[j-1]:\n",
+    "            arr[j], arr[j-1] = arr[j-1], arr[j]\n",
+    "        else:\n",
+    "            break\n",
+    "\n",
+    "print(arr)"
    ]
   }
  ],
