--- a/파이썬 알고리즘 문제풀이 (코딩테스트 대비)/Section6/1. 재귀함수를 이용한 이진수 출력.ipynb
+++ b/파이썬 알고리즘 문제풀이 (코딩테스트 대비)/Section6/1. 재귀함수를 이용한 이진수 출력.ipynb
@@ -32,6 +32,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 6]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(filter(lambda x : x > 0, [1, -3, 2, 0, -5, 6]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
