--- a/이것이 취업을 위한 코딩테스트다/BFS,DFS/2. 음료수 얼려 먹기.ipynb
+++ b/이것이 취업을 위한 코딩테스트다/BFS,DFS/2. 음료수 얼려 먹기.ipynb
@@ -49,6 +49,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# 1. 상, 하, 좌, 우를 확인하면서 해당 데이터가 잇는지 확인할 것\n",
+    "# 2. 데이터가 0이라면 visited로 바꿔준 후에 해당 데이터로 이동한 후에 똑같이 탐색\n",
+    "# 3. \n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
