--- a/이것이 취업을 위한 코딩테스트다/BFS,DFS/BFS.ipynb
+++ b/이것이 취업을 위한 코딩테스트다/BFS,DFS/BFS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -14,20 +14,26 @@
     }
    ],
    "source": [
+    "# 1. 근처에 있는 데이터들을 stack 넣어줌 가장 작은 숫자\n",
+    "# 2. data를 하나씩 popleft해주면서 해당 데이터에 있는 graph를 순회\n",
+    "# 3. popleft한 곳의 방문처리가 되지 않은 곳을 방문처리해주면서 순회\n",
+    "\n",
     "from collections import deque\n",
     "\n",
+    "# 1. data = stack.popleft()\n",
+    "# 2. \n",
     "def bfs(graph, start, visited):\n",
-    "    queue = deque([start])\n",
     "    visited[start] = True\n",
+    "    queue = deque([start])\n",
     "\n",
     "    while queue:\n",
-    "        v = queue.popleft()\n",
-    "        print(v, end = ' ')\n",
-    "\n",
-    "        for i in graph[v]:\n",
+    "        data = queue.popleft()\n",
+    "        print(data, end = ' ')\n",
+    "        for i in graph[data]:\n",
     "            if not visited[i]:\n",
     "                queue.append(i)\n",
     "                visited[i] = True\n",
+    "\n",
     "\n",
     "graph = [\n",
     "    [],\n",
