--- a/파이썬 알고리즘 문제풀이 (코딩테스트 대비)/Section6/9. 순열 구하기.ipynb
+++ b/파이썬 알고리즘 문제풀이 (코딩테스트 대비)/Section6/9. 순열 구하기.ipynb
@@ -2,67 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "1 2 \n",
+      "1 3 \n",
+      "2 1 \n",
+      "2 3 \n",
+      "3 1 \n",
+      "3 2 \n"
      ]
     }
    ],
    "source": [
     "from sys import stdin\n",
-    "stdin = open(\"./input/input8.txt\", \"rt\")\n",
+    "stdin = open(\"./input/input9.txt\", \"rt\")\n",
     "\n",
-    "def DFS(L, sum):\n",
-    "    global result\n",
-    "    # 1. 금액을 빼주기\n",
-    "    # 2. 거슬러 줄 금액이 0이 됐다면 append후 return, 넘친다면 return\n",
-    "    if result < L:\n",
+    "def DFS(L):\n",
+    "    if L == m:\n",
+    "        for x in arr:\n",
+    "            print(x, end = ' ')\n",
+    "        print()\n",
     "        return\n",
-    "\n",
-    "    if sum > m:\n",
-    "        return\n",
-    "\n",
-    "    if sum == m:\n",
-    "        if L < result:\n",
-    "            result = L\n",
-    "        # arr[i]에 coin을 순차적으로 넣어줘야 함\n",
     "    else:\n",
-    "        for i in range(n):\n",
-    "            DFS(L+1, sum + coin[i])\n",
+    "        for i in range(1, n+1):\n",
+    "            # 만약, ch[i]가 체크가 되어있다면, return\n",
+    "            if ch[i] == 0:\n",
+    "                ch[i] = 1\n",
+    "                arr[L] = i\n",
+    "                DFS(L + 1)\n",
+    "                ch[i] = 0\n",
+    "\n",
+    "n, m = map(int, stdin.readline().split())\n",
+    "arr = [0] * m\n",
+    "ch = [0] * (n+1)\n",
+    "DFS(0)\n",
     "\n",
     "\n",
-    "n = int(stdin.readline())\n",
-    "coin = list(map(int,stdin.readline().split()))\n",
-    "m = int(stdin.readline())\n",
-    "\n",
-    "res = []\n",
-    "result = 214700000\n",
-    "coin.sort(reverse=True)\n",
-    "\n",
-    "DFS(0, 0)\n",
-    "print(result)"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "33\n"
+      "[0, 1, 2]\n"
      ]
     }
    ],
    "source": [
-    "print(33)"
+    "arr = [x for x in range(3)]\n",
+    "print(arr)"
    ]
   },
   {
@@ -71,6 +70,26 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = (0) * 10\n"
+   ]
   }
  ],
  "metadata": {
