--- a/파이썬 알고리즘 문제풀이 (코딩테스트 대비)/Section7/1. 최대점수 구하기(DFS).ipynb
+++ b/파이썬 알고리즘 문제풀이 (코딩테스트 대비)/Section7/1. 최대점수 구하기(DFS).ipynb
@@ -2,41 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 2 7 6 8 3 4 5 "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def dfs(graph, v, visited):\n",
-    "    visited[v] = True\n",
-    "    print(v, end = ' ')\n",
-    "    for i in graph[v]:\n",
-    "        if not visited[i]:\n",
-    "            dfs(graph, i, visited)\n",
+    "from sys import stdin\n",
+    "stdin = open(\"./input/input1.txt\", \"rt\")\n",
     "\n",
-    "graph = [\n",
-    "    [],\n",
-    "    [2, 3, 8],\n",
-    "    [1, 7],\n",
-    "    [1, 4, 5],\n",
-    "    [3, 5],\n",
-    "    [3, 4],\n",
-    "    [7],\n",
-    "    [2, 6, 8],\n",
-    "    [1, 7]\n",
-    "]\n",
     "\n",
-    "visited = [False] * 9\n",
-    "\n",
-    "dfs(graph, 1, visited)"
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
