--- a/backjoon/DFS, BFS/1. DFS와 BFS.ipynb
+++ b/backjoon/DFS, BFS/1. DFS와 BFS.ipynb
@@ -2,17 +2,68 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 1 2 5 4 \n",
+      "3 1 4 2 5 "
+     ]
+    }
+   ],
    "source": [
-    "from sys import stdin\n",
-    "stdin = open(\"./input/input1.txt\", \"rt\")\n",
+    "import sys\n",
+    "from collections import deque\n",
     "\n",
-    "n, m, v = stdin.readline().split()\n",
-    "arr = for x in stdin.readline().split()\n",
+    "sys.stdin = open(\"./input/input1.txt\", \"rt\")\n",
+    "input = sys.stdin.readline\n",
     "\n",
-    "def dfs():\n",
+    "n, m, start = map(int, input().split())\n",
+    "graph = [[] for _ in range(n+1)]\n",
+    "\n",
+    "for _ in range(m):\n",
+    "  s, e = map(int, input().split())\n",
+    "  graph[s].append(e)\n",
+    "  graph[e].append(s)\n",
+    "\n",
+    "# 정렬\n",
+    "for i in range(len(graph)):\n",
+    "  graph[i].sort()\n",
+    "\n",
+    "def DFS(graph, start):\n",
+    "  visited[start] = True\n",
+    "  print(start, end = ' ')\n",
+    "  for i in graph[start]:\n",
+    "    if not visited[i]:\n",
+    "      DFS(graph, i)\n",
+    "      visited[i] = True\n",
+    "\n",
+    "# 1. deque에 데이터를 집어넣음\n",
+    "# 2 .popleft를 통해 데이터를 꺼내고\n",
+    "# 3. 그 데이터를 방문처리\n",
+    "# 4. for i in graph[now]를 돌면서\n",
+    "# 5. if not visited[i]라면, append해준 후 방문처리\n",
+    "def BFS(graph, start):\n",
+    "  visited[start] = True\n",
+    "  queue = deque([start])\n",
+    "  while queue:\n",
+    "    now = queue.popleft()\n",
+    "    print(now, end = ' ')\n",
+    "    for i in graph[now]:\n",
+    "      if not visited[i]:\n",
+    "        queue.append(i)\n",
+    "        visited[i] = True\n",
+    "      \n",
+    "  \n",
+    "\n",
+    "visited = [False] * (n+1)\n",
+    "DFS(graph, start)\n",
+    "print()\n",
+    "visited = [False] * (n+1)\n",
+    "BFS(graph, start)\n",
     "\n"
    ]
   }
@@ -24,7 +75,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.6"
   },
   "orig_nbformat": 4,
