--- a/파이썬 알고리즘 문제풀이 (코딩테스트 대비)/Section6/10. 수열 추측하기.ipynb
+++ b/파이썬 알고리즘 문제풀이 (코딩테스트 대비)/Section6/10. 수열 추측하기.ipynb
@@ -2,40 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 2 7 6 8 3 4 5 "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def dfs(graph, v, visited):\n",
-    "    visited[v] = True\n",
-    "    print(v, end = ' ')\n",
-    "    for i in graph[v]:\n",
-    "        if not visited[i]:\n",
-    "            dfs(graph, i, visited)\n",
+    "from sys import stdin\n",
+    "stdin = open(\"./input/input10.txt\", \"rt\")\n",
     "\n",
-    "graph = [\n",
-    "    [],\n",
-    "    [2, 3, 8],\n",
-    "    [1, 7],\n",
-    "    [1, 4, 5],\n",
-    "    [3, 5],\n",
-    "    [3, 4],\n",
-    "    [7],\n",
-    "    [2, 6, 8],\n",
-    "    [1, 7]\n",
-    "]\n",
+    "# 배열을 거꾸로 탐색하면서, \n",
+    "def DFS(L):\n",
+    "    #  부분집합 처럼 순회하면서, 결과값들을 모두 더해서 해당 값이 되는지 확인할 것\n",
+    "    if L == n:\n",
+    "        return\n",
     "\n",
-    "visited = [False] * 9\n",
+    "    # 1. 16번 돌면서, 전체 값들이 \n",
+    "    for x in range(m):\n",
+    "        arr[L]\n",
     "\n",
-    "dfs(graph, 1, visited)"
+    "\n",
+    "n, m = map(int, stdin.readline().split())\n",
+    "arr = [0] * n\n",
+    "\n"
    ]
   }
  ],
